--- a/styles.css
+++ b/styles.css
@@ -36,20 +36,31 @@ header {
     background-size: 70%;
     width: 100%;
     height: auto;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
 }
+#arrow {
+    width: 50px;
+    height: 50px;
+}
+
+
 
 main {
     color: white;
-    background-color: #151515;
+    background-color: #0a0a0a;
     flex: 1;
     padding: 40px;
 }
 
 section:not(:last-child) {
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 }
 section:first-child {
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 
@@ -62,18 +73,17 @@ section:first-child {
     max-width: 50%;
     display: flex;
     flex-direction: column;
+
     margin-bottom: 70px;
 }
 .song p {
     margin-bottom: 10px;
 }
 video {
-    margin-left: 20px;
     width: 100%;
     margin-bottom: 20px;
 }
 audio {
-    margin-left: 20px;
     width: 100%;
 }
 
@@ -86,7 +96,7 @@ footer {
 }
 
 a {
-    color: #4CAF50;
+    color: #ff7800;
     text-decoration: none;
 }
 a:hover {
@@ -97,6 +107,7 @@ a:hover {
     margin: 15px;
 }
 h1 {
+    text-align: center;
     font-size: 45px;
     margin-bottom: 15px;
 }
@@ -107,7 +118,6 @@ h2 {
 }
 p {
     font-size: 30px;
-    margin-left: 20px;
     margin-bottom: 20px;
 }
 
@@ -136,5 +146,14 @@ p {
     }
     footer {
         padding: 20px;
+    }
+    h1 {
+        font-size: 38px;
+    }
+    h2 {
+        font-size: 28px;
+    }
+    p {
+        font-size: 23px;
     }
 }
